Arreglo de padding

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -86,7 +86,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer bg-2">
+    <footer class="footer bg-2 width-100">
       <img
         src="../images/logos/LOGO-9.png"
         class="logoNav pointer hover-2 width-40p p-block-2"
