--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -90,7 +90,7 @@
             required
           ></textarea>
 
-          <button class="inputForm radius-2 bg-3 white size-1" type="submit">
+          <button class="inputForm radius-2 white size-1 buttonEnviar" type="submit">
             ENVIAR
           </button>
         </form>
