--- a/pages/verMas.html
+++ b/pages/verMas.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="../pages/VerMas.css" />
   </head>
   <body>
-    <div class="logo">
+    <div class="logo width-100 flex flex-center align-center">
       <img
         src="../images/logos/LOGO-3.png"
         class="logoNav pointer hover-2 width-40p m-top-3"
@@ -40,7 +40,7 @@
       />
     </div>
 
-    <main class="contacto">
+    <main class="contacto width-100">
       <iframe
         src="https://video.fastly.steamstatic.com/store_trailers/257075324/movie480_vp9.webm?t=1732209325"
         frameborder="2"
@@ -53,7 +53,7 @@
       </button>
     </main>
 
-    <footer class="footer bg-2">
+    <footer class="footer bg-2 width-100">
       <img
         src="../images/logos/LOGO-9.png"
         class="logoNav pointer hover-2 width-40p p-block-2"
