--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
 
-  <body class="flex column relative bg-3">
+  <body class="flex column relative bg-3 width-100">
     <header
       id="header"
       class="height-content bg-2 container flex flex-between align-center pad-block-2 absolute fixed width-100"
@@ -37,7 +37,7 @@
         alt="logo de Skull Dungeon"
       />
 
-      <nav>
+      <nav class="width-100 flex flex-center">
         <ul class="flex gap-2 align-center m-block-1">
           <li class="flex">
             <a class="pointer p-2" href="index.html">INICIO</a>
@@ -57,7 +57,7 @@
       >
     </header>
 
-    <main class="main bg-1 container grid grid-2 gap-4 height-70 relative">
+    <main class="main bg-1 container grid grid-2 gap-4 height-70 relative width-100">
       <div class="divMain flex column flex-center gap-3 height-70">
         <h1 class="title white">Skull Dungeon</h1>
         <p class="text op-5">
@@ -76,7 +76,7 @@
       </picture>
     </main>
 
-    <section id="portfolio" class="container p-bottom-5">
+    <section id="portfolio" class="container p-bottom-5 width-100">
       <div class="imgPortfofio flex flex-center p-block-2 width-100">
         <img
           src="./images/logos/LOGO-9.png"
@@ -123,7 +123,7 @@
         <div class="card width-100 height-100 hidden radius-2">
           <img
             class="height-100"
-            src="./images/stock/project1/a3.avif"
+            src="./images/stock/project1/a3.jpg"
             alt="imagen del juego"
           />
           <div class="content flex column gap-2">
@@ -250,7 +250,7 @@
       </div>
     </section>
 
-    <footer class="footer bg-2">
+    <footer class="footer bg-2 width-100">
       <img
         src="./images/logos/LOGO-9.png"
         class="logoNav pointer hover-2 width-40p p-block-2"
