--- a/pages/blog.html
+++ b/pages/blog.html
@@ -29,7 +29,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../library.css" />
 
-    <link rel="stylesheet" href="../pages/blog.css" />
+    <link rel="stylesheet" href="../pages/styleblog.css" />
   </head>
 
   <body class="width-100 flex-center align-center">
@@ -41,12 +41,20 @@
           alt="logo de Skull Dungeon"
         />
       </div>
-
-      <h3 class="width-100 flex flex-center align-center m-bottom-3">Blog</h3>
-
+<div class=" blog ">
+    <img
+        src="../images/logos/LOGO-9.png"
+        class="width-70p m-inline-5 m-bottom-3"
+        alt="logo de Skull Dungeon"
+      /><h3 class=" flex flex-center align-center m-bottom-3">Blog</h3>   <img
+      src="../images/logos/LOGO-9.png"
+      class="width-70p m-inline-5 m-bottom-3 "
+      alt="logo de Skull Dungeon"
+    /></h3>
+</div>
       <article class="article m-inline-7 m-bottom-3 text-center">
         <p>
-          Este es un blog creado para compartir pensamientos y experiencias con
+          Este es un blog creado para compartir pensamientos y experiencias en
           el mundo del video Juejo. Espero que disfruten leyendo las
           publicaciones compartidas.
         </p>
@@ -56,15 +64,15 @@
 
       <section class="comments m-top-4 m-inline-7">
         <div class="comment">
-          <img src="../images/avatar1.jpg" alt="Avatar" />
+          <img class="border-2" src="../images/avatar1.jpg" alt="Avatar" />
           <p>
             <strong class="size-2">Juan Game :</strong> Me encanta el blog, Es
-            muy informativo y entretenido. Gracias por compartir tu conocimiento
+            muy informativo y entretenido. Gracias por compartir sus conocimientos
             con nosotros.
           </p>
         </div>
         <div class="comment">
-          <img src="../images/avatar2.jpg" alt="Avatar" />
+          <img class="border-2" src="../images/avatar2.jpg" alt="Avatar" />
           <p>
             <strong class="size-2">Pedro Jugador :</strong> Estoy de acuerdo con
             Juan. el blog de Skull Dungeon esta buenisimo, es una gran fuente de
@@ -73,7 +81,7 @@
           </p>
         </div>
         <div class="comment">
-          <img src="../images/avatar3.jpg" alt="Avatar" />
+          <img class="border-2" src="../images/avatar3.jpg" alt="Avatar" />
           <p>
             <strong class="size-2">Alex Lento :</strong> Excelente Blog, Me ha
             ayudado mucho a entender el Juego y compartir experiencias.
