--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -34,7 +34,7 @@
     <div class="logo">
       <img
         src="../images/logos/LOGO-3.png"
-        class="logoNav pointer hover-2 width-40p m-top-3"
+        class="logoNav pointer hover-2 width-40p m-block-3"
         alt="logo de Skull Dungeon"
       />
     </div>
@@ -90,7 +90,10 @@
             required
           ></textarea>
 
-          <button class="inputForm radius-2 white size-1 buttonEnviar" type="submit">
+          <button
+            class="inputForm radius-2 white size-1 buttonEnviar"
+            type="submit"
+          >
             ENVIAR
           </button>
         </form>
