--- a/pages/verMas.html
+++ b/pages/verMas.html
@@ -28,22 +28,22 @@
     />
     <!-- CSS -->
     <link rel="stylesheet" href="../library.css" />
-    <link rel="stylesheet" href="../pages/styleContacto.css" />
-    <link rel="stylesheet" href="../pages/VerMas.css" />
+
+    <link rel="stylesheet" href="../pages/styleVerMas.css" />
   </head>
   <body>
-    <div class="logo width-100 flex flex-center align-center">
+    <div class="logo">
       <img
         src="../images/logos/LOGO-3.png"
-        class="logoNav pointer hover-2 width-40p m-top-3"
+        class="logoNav pointer hover-2 width-40p"
         alt="logo de Skull Dungeon"
       />
     </div>
 
-    <main class="contacto width-100">
+    <main class="main width-100">
       <iframe
         src="https://video.fastly.steamstatic.com/store_trailers/257075324/movie480_vp9.webm?t=1732209325"
-        frameborder="2"
+        frameborder="1"
         width="600"
         height="300"
       ></iframe>
