--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div class="imgPortfofio flex flex-center p-block-2 width-100">
         <img
           src="./images/logos/LOGO-9.png"
-          class="width-150p"
+          class="width-150p m-top-4"
           alt="logo de Skull Dungeon"
         />
       </div>
