--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -39,7 +39,7 @@
       />
     </div>
 
-    <main class="contacto">
+    <main class="contacto width-100">
       <section class="">
         <div class="h2Contacto flex radius-2 flex-center radius-2">
           <h2 id="contacto" class="size-3 primary">Contacto</h2>
