--- a/pages/verMas.html
+++ b/pages/verMas.html
@@ -32,10 +32,24 @@
     <link rel="stylesheet" href="../pages/styleVerMas.css" />
   </head>
   <body>
-    <div class="logo">
+    <div class="logos width-100">
       <img
-        src="../images/logos/LOGO-3.png"
-        class="logoNav pointer hover-2 width-40p"
+        src="../images/logos/LOGO-9.png"
+        class="width-70p m-inline-6"
+        alt="logo de Skull Dungeon"
+      />
+
+      <div class="logo width-40p">
+        <img
+          src="../images/logos/LOGO-3.png"
+          class="logoNav pointer hover-2 width-40p"
+          alt="logo de Skull Dungeon"
+        />
+      </div>
+
+      <img
+        src="../images/logos/LOGO-9.png"
+        class="width-70p m-inline-6"
         alt="logo de Skull Dungeon"
       />
     </div>
