Arreglo de boton menu

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="card width-100 height-100 hidden radius-2 shadow-4">
           <img
             class="height-100"
-            src="./images/stock/project1/a3.avif"
+            src="./images/stock/project1/a3.jpg"
             alt="imagen del juego"
           />
           <div class="content flex column gap-2">
